# straxen

./: .bandit  .bumpversion.cfg  .coverage  .coveragerc  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .readthedocs.yml  .singularity_inner  .travis.yml  EventBasicsModified.py  EventBasicsModifiedS1.py  EventBasicsModifiedS2.py  HISTORY.md  LICENSE  README.md  bumpversion.cfg  pyproject.toml  pytest.ini  readthedocs.yml  readthedocs_conda.yml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: check_lineage_updates.sh  create-utilix-config.sh  create_empty_utilix_config.sh  create_pre_apply_function.sh  create_readonly_utilix_config.sh  filter_strax_from_requirements.sh  install_straxen.sh  pre_pyflakes.sh  preinstall_requirements.sh  update-context-collection.py
.github/workflows/: build_cov_file.yml  code_style.yml  contexts.yml  coveralls.yml  pypi_install.yml  pytest.yml  test_install.yml
bootstrax_exceptions/: 048983_exception.txt
docs/: Makefile  make.bat  make_docs.sh  pull_request_template.md  requirements.txt
docs/source/: bootstrax.rst  build_context_doc.py  build_datastructure_doc.py  build_release_notes.py  cmt.rst  cmt2.rst  conf.py  config_storage.rst  extending_straxen.rst  index.rst  online_monitor.rst  scada_interface.rst  scripts.rst  setup.rst  url_configs.rst  xedocs_configs.rst
extra_requirements/: __init__.py  requirements-docs.txt  requirements-tests.txt
nEXO_strax/: __init__.py  common.py  contexts.py  itp_map.py  mini_analysis.py  rundb.py  units.py
nEXO_strax/analyses/: quick_checks.py  waveform_plots.py
nEXO_strax/plugins/: __init__.py  chargesim.py  cuts.py  event_processing.py  nEXO_MC_reader.py  peak_processing.py  pulse_processing.py
notebooks/: EventDisplayInteractive.ipynb  Open_data.ipynb  Strax_demo.ipynb  bootstrax.ipynb
notebooks/experimental/: check_raw_records.ipynb  compress_benchmark.ipynb  dali_process_new.ipynb
notebooks/tutorials/: EventDisplayInteractive.ipynb  Open_data.ipynb  ScadaInterfaceExample.ipynb  SuperrunsExample.ipynb  cmt2.0_basics.ipynb  cmt2.0_example_plugin.ipynb  example.html  pulse_analysis.ipynb  run_selection.ipynb  strax_demo.ipynb
requirements/: requirements-docs.txt  requirements-tests.txt
straxen/: SCADA_SECRETS.py  __init__.py  bokeh_utils.py  common.py  contexts.py  corrections_services.py  daq_core.py  docs_utils.py  entry_points.py  gain_elife_models.py  gain_models.py  get_corrections.py  hitfinder_thresholds.py  holoviews_utils.py  itp_map.py  legacy_fdc.py  matplotlib_utils.py  mini_analysis.py  misc.py  mongo_storage.py  numbafied_scipy.py  online_monitor.py  peak_correction_functions.py  peak_corrections.py  rucio.py  rundb.py  scada.py  test_utils.py  units.py  url_config.py  url_config.py.save  utils.py  xenon_context.py
straxen/Python-3.9.17/: Makefile  Makefile.pre  config.status  pybuilddir.txt  pyconfig.h  python-config  python-config.py
straxen/analyses/: __init__.py  bokeh_waveform_plot.py  daq_waveforms.py  event_display.py  holoviews_waveform_display.py  led_calibration.py  mpl_helpers.py  nveto_plots.py  posrec_comparison.py  posrec_comparson.py  pulse_plots.py  quick_checks.py  records_matrix.py  waveform_plot.py  waveform_plots.py
straxen/config/: .url_config.py.swp  __init__.py  check_global_version.py  check_superruns.py  config_tests.py  preprocessors.py  protocols.py  regex_dispatcher.py  url_config.py  utils.py
straxen/corrections/: __init__.py  base_corrections.py  base_references.py  bodega.py  client.py  clock.py  context_configs.py  correction.py  correction_store.py  dataframes.py  electron_drift.py  electron_lifetime.py  extraction_efficiency.py  fax.py  field_distortion.py  field_simulation.py  frames.py  global_versions.py  hit_thresholds.py  lone_hits.py  model.py  plugin_lineages.py  pmt_gains.py  position_reconstruction.py  resource_references.py  s1_aft_xyz.py  s1_xyz.py  s2_xy.py  schemas.py  se_gains.py  settings.py  simple_corrections.py  storage.py  tf_models.py  utils.py
straxen/data/: elife.json  elife.pickle
straxen/document_storage/: __init__.py  client.py  document.py
straxen/holoviews/: holoviews_inspector.py  holoviews_peak_data.py  holoviews_pmt_array.py  holoviews_tpc_event_display.py
straxen/legacy/: README.md  __init__.py  contexts_1t.py  hitfinder_thresholds.py  legacy_url_configs.py  xenon1t_url_configs.py
straxen/plugins/: KrDoubleS1Scatter.py  README.md  __init__.py  acqmon_processing.py  acquisition_monitor.py  afterpulse_processing.py  bayes_peak_classification.py  bayes_peaklet_classification.py  cmt2_example.py  cut_plugins.py  cuts.py  daqreader.py  daqreader_hdm.py  defaults.py  double_scatter.py  event_area_per_channel.py  event_info.py  event_patterfit.py  event_patternfit.py  event_processing.py  event_shadow.py  event_shadow_test.py  event_w_bayes_class.py  fax_interface.py  high_energy_processing.py  hit_finder_optimize.py  led_calibration.py  local_minimum_info.py  multi_scatter.py  nveto_daqreader.py  nveto_ext_timings.py  nveto_hitlets.py  nveto_pulse_processing.py  nveto_recorder.py  online_hs_monitor.py  online_monitor.py  partitions.py  partitions_event.py  pax_interface.py  (+15 more)
tests/: __init__.py  test_1T_plugins.py  test_aqmon.py  test_basics.py  test_bayes_plugin.py  test_channel_split.py  test_cmt.py  test_cmt2.py  test_common.py  test_contexts.py  test_count_pulses.py  test_daq_reader.py  test_database_frontends.py  test_deprecated.py  test_holoviews_utils.py  test_itp_map.py  test_led_calibration.py  test_load.py  test_local_minimum_info.py  test_merge_peaks.py  test_mini_analyses.py  test_misc.py  test_mongo_downloader.py  test_mongo_interactions.py  test_nveto_events.py  test_nveto_recorder.py  test_patternfit.py  test_peaklet_processing.py  test_peaks.py  test_plugins.py  test_posrec_plugins.py  test_rucio.py  test_scada.py  test_several.py  test_strax_time_selection.py  test_test_misc.py  test_testing_suite.py  test_url_config.py  test_veto_hitlets.py  test_veto_veto_regions.py  (+1 more)
(+345 files in other folders)
