[tool]
[tool.poetry]
name = "straxen"
version = "2.2.5"
description = "Streaming analysis for XENON"
readme = "README.md"
authors = [
  "Straxen contributors, the XENON collaboration",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Physics",
]
repository = "https://github.com/XENONnT/straxen"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
strax = { git = "https://github.com/AxFoundation/strax.git" }
bokeh = "*"
commentjson = "*"
gitpython = "*"
graphviz = "*"
immutabledict = "*"
matplotlib = "*"
multihist = ">=0.6.3"
numba = ">=0.50.0"
numpy = "<2.0.0"
sharedarray = { url = "https://xenon.isi.edu/python/SharedArray-3.2.3.tar.gz", optional = true, extras = ["tests"] }
packaging = "*"
m2r = "==0.2.1"
docutils = "==0.18.1"
mistune = "==0.8.4"
pymongo = "*"
requests = "*"
utilix = ">=0.5.3"
xedocs = "*"
commonmark = { version = "0.9.1", optional = true, extras = ["docs"] }
nbsphinx = { version = "0.8.9", optional = true, extras = ["docs"] }
recommonmark = { version = "0.7.1", optional = true, extras = ["docs"] }
sphinx = { version = "7.1.2", optional = true, extras = ["docs"] }
sphinx_rtd_theme = { version = "1.3.0", optional = true, extras = ["docs"] }
Jinja2 = { version = "3.1.4", optional = true, extras = ["docs"] }
urllib3 = { version = "2.2.2", optional = true, extras = ["docs"] }
lxml_html_clean = { version = "*", optional = true, extras = ["docs"] }

[tool.poetry.extras]
docs = [
  "commonmark",
  "nbsphinx",
  "recommonmark",
  "sphinx",
  "sphinx_rtd_theme",
  "Jinja2",
  "urllib3",
  "lxml_html_clean",
]
tests = [
  "sharedarray",
  "base_environment",
]

[build-system]
requires = ["poetry-core>=1.0.8", "setuptools>=61.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
preview = true

[tool.docformatter]
recursive = true
in-place = true
style = "sphinx"
wrap-summaries = 100
wrap-descriptions = 100
blank = true
